<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="lang"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="130dp">

                <ImageView
                    android:id="@+id/top"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_avatar"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="3dp"
                    app:layout_constraintBottom_toBottomOf="@id/top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/top" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image"
                    app:layout_constraintTop_toBottomOf="@id/top"
                    app:layout_constraintVertical_bias="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/lleditprofile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/edit_profile"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="3dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/color1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/line_discrete"
                android:layerType="software"

                />

            <LinearLayout
                android:id="@+id/llChangeLanguage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/change_language"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="3dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/color1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/line_discrete"
                android:layerType="software"


                />

            <LinearLayout
                android:id="@+id/llcontactus"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/contact_us"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="3dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/color1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/line_discrete"
                android:layerType="software" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="3dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/color1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/line_discrete"
                android:layerType="software" />

            <LinearLayout
                android:id="@+id/llchat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/chat"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="3dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/color1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/line_discrete"

                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llfav"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/favourite"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="3dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/color1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/line_discrete"
                android:layerType="software" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/social_media"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/facebook" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="0dp" />

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/google_plus" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="0dp" />

                <ImageView
                    android:id="@+id/instgram"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/instagram" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="0dp" />

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/twitter" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="0dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:src="@drawable/ic_logout"
                    app:tint="@color/color1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>